# ParallelProgramm

./: CMakeLists.txt  distributor_get.cpp  distributor_post.cpp  json_generator.py
src/: .globals.h.swp  Action.h  BTree.cpp  BTree.h  BackIndexRock2.cpp  BackIndexRock2.h  Baket.h  Baket2.cpp  Request.h  RestServer.cpp  RestServer.h  Searcher.cpp  Searcher.h  UUID.h  globals.h  main.cpp
testZeroMQ/: .b.sh.swp  CMakeLists.txt  RestServer.cpp  RestServer.h  b.sh  dealer  dealer.cpp  globals.h  my_program  queue.h  router  router.cpp  sr.sh
